Fix authorization, validation and DTO consistency issues
- Add membership checks to getTodoById, getAllTodos, getTodosByUserId
- Fix duplicate @JsonProperty on TodoResponse/TodoDto fields
- Add authId mapping in UserMapper.toResponse()
- Unify password min length to 5 across all DTOs
- Standardize validation error response format with timestamp/status
- Change ListResponse/ListMemberResponse dates from String to LocalDateTime
- Add findByListIdsVisibleToUser and findListIdsByUserId repository methods
- Update 307 tests (was 305, +2 authorization tests)